add calculationResult field to db and to some handlers
